# IDP_E_7

./: README.md  docker-compose.yml  start.ps1
fastapi/: Dockerfile  app.py  cnn_book.ipynb  pyproject.toml  requirements.txt
fastapi/data/: Support_Tickets_Unlabeled.csv  ner_annotations.jsonl  ticket_labels.csv
fastapi/nlp/: __init__.py  classifier_service.py  draft_service.py  ner_service.py
fastapi/scripts/: evaluate_ner.py  train.py
nginx/: nginx.conf
streamlitapi/: pyproject.toml  requirements.txt  streamlit_app.py
