# please update to "tensorflow-macos>=2.13.0" for macos

[project]
name = "fastapi-backend"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "tensorflow>=2.13.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "scikit-learn>=1.4.0",
    "datasets>=2.18.0",
    "mlflow>=2.11.0",
    "openai>=1.12.0",
    "pandas>=2.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "setuptools>=82.0.0",
    "tensorboard>=2.15",
    "plotly>=6.6.0",
    "matplotlib>=3.10.8",
    "dotenv>=0.9.9",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[dependency-groups]
dev = [
    "setuptools>=82.0.0",
]
