[project]
name = "streamlitapi-frontend"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
